--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^11.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
+    "@types/bcrypt": "^6.0.0",
     "@types/shortid": "^2.2.0",
     "prettier": "^2.8.0",
     "typescript": "^5.0.2"
